--- a/package.json
+++ b/package.json
@@ -31,42 +31,17 @@
     "@types/node": "^6.0.52",
     "@types/parse5": "^2.2.34",
     "@types/restify": "^2.0.35",
-    "babel-generator": "^6.26.0",
-    "babel-template": "^6.26.0",
-    "babel-traverse": "^6.26.0",
-    "caching-transform": "^1.0.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "cross-spawn": "^5.1.0",
-    "execa": "^0.8.0",
-    "express": "4.16.0",
-    "find-cache-dir": "^1.0.0",
-    "handlebars": "^4.0.10",
-    "invariant": "^2.2.2",
-    "istanbul-lib-instrument": "^1.8.0",
-    "istanbul-lib-report": "^1.1.1",
-    "istanbul-lib-source-maps": "^1.2.1",
-    "istanbul-reports": "^1.1.2",
     "jszip": "^3.1.2",
-    "mocha": "^3.5.3",
-    "mochawesome": "^2.3.1",
-    "mv": "^2.1.1",
-    "mysql": "2.14.1",
-    "normalize-package-data": "^2.4.0",
-    "nyc": "^11.2.1",
-    "package-json": "^4.0.1",
+    "mocha": "^3.2.0",
+    "mochawesome": "^1.5.2",
+    "mysql": "^2.15.0",
+    "nyc": "^10.0.0",
     "parse5": "^3.0.1",
-    "registry-auth-token": "^3.3.1",
-    "registry-url": "^3.1.0",
-    "request": "^2.83.0",
+    "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
-    "restify": "^6.0.1",
-    "semver-diff": "^2.1.0",
-    "send": "^0.16.0",
-    "spawn-wrap": "^1.3.8",
-    "superagent": "^3.6.1",
-    "tslint": "^5.7.0",
-    "tsutils": "^2.10.0",
+    "restify": "^4.0.3",
     "typescript": "^2.1.X"
   }
 }
