--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ src/*.js
 src/*.map
 src/**/*.js
 src/**/*.map
+src/db/DBconfig.ts
+src/db/DBconfig.js
+src/db/DBconfig.map
 test/*.js
 test/*.map
 npm-debug.log
@@ -14,4 +17,3 @@ coverage/
 .nyc_output/
 local/
 !src/rest/public/javascripts/*.js
-src/db/DBconfig.*
